[build-system]
requires = ["setuptools >= 45.2.0", "wheel >= 0.36.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxmq"
version = "0.2.2"
authors = [
    {name = "Ildar Tamendarov", email = "ildar.tamendarov@gmail.com"}
]
description = "FluxMQ for Python"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Documentation = "https://github.com/kristobalus/fluxmq/tree/main#readme"
Source = "https://github.com/kristobalus/fluxmq"
Tracker = "https://github.com/kristobalus/fluxmq/issues"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true