[metadata]
name = fluxmq-py
version = 1.0.0
author = Tabami
author_email = actharsis@gmail.com
description = Translation https://github.com/flux-agi/fluxmq to python
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/actharsis/fluxmq-py
project_urls =
    Bug Tracker = https://github.com/actharsis/fluxmq-py/issues
    repository = https://github.com/actharsis/fluxmq-py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = fluxmq
packages = find:
python_requires = >=3.10

[options.packages.find]
where = fluxmq