[metadata]
name = fluxmq
version = 0.1
author = Ildar Tamendarov
author_email = ildar.tamendarov@gmail.com
description = FluxMQ for Python
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/kristobalus/fluxmq
project_urls =
    Bug Tracker = https://github.com/kristobalus/fluxmq/issues
    repository = https://github.com/kristobalus/fluxmq
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages =
    fluxmq
    fluxmq.adapter
python_requires = >=3.10
install_requires = file: requirements.txt

[options.packages.find]
where = src